--- a/nats-server.conf
+++ b/nats-server.conf
@@ -1,8 +1,45 @@
-server_name=
+server_name=nats
 listen=4222
 jetstream: enabled
 jetstream {
   store_dir="",
   max_mem: "1G",
   max_file: "2G"
+}
+mqtt {
+  listen: 0.0.0.0:1883
+}
+accounts {
+  # Use the system account as the default operator
+  $SYS {
+    users = [
+        {   user: "admin",
+            pass: ""
+        }
+    ]
+}
+
+cluster {
+  name: example
+
+  # host/port for inbound route connections from other server
+  listen: localhost:4244
+
+  # Authorization for route connections
+  # Other server can connect if they supply the credentials listed here
+  # This server will connect to discovered routes using this user
+  authorization {
+    user: route_user
+    password: pwd
+    timeout: 0.5
+  }
+
+  # This server establishes routes with these server.
+  # This server solicits new routes and Routes are actively solicited and connected to from this server.
+  # Other servers can connect to us if they supply the correct credentials
+  # in their routes definitions from above.
+  routes = [
+    nats://route_user:pwd@127.0.0.1:4245
+    nats://route_user:pwd@127.0.0.1:4246
+  ]
 }
