--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,35 @@
 version: '3.7'
-
 services:
-  nats:
-    image: nats:latest
-    #command: "-c /etc/nats/nats.conf --cluster nats://0.0.0.0:6222 --routes=nats://ruser:T0pS3cr3t@nats:6222"
+  nats1:
+    container_name: nats1
+    image: nats
+    entrypoint: /nats-server
+    command: --server_name N1 --cluster_name JSC --js --sd /data --cluster nats://0.0.0.0:4245 --routes nats://nats2:4245,nats://nats3:4245 -p 4222
+    networks:
+      - nats
     ports:
-    - "4222:4222"
-    - "8222:8222"
-    - "6222:6222"
+      - 4222:4222
 
   nats2:
-    image: nats:latest
+    container_name: nats2
+    image: nats
+    entrypoint: /nats-server
+    command: --server_name N2 --cluster_name JSC --js --sd /data --cluster nats://0.0.0.0:4245 --routes nats://nats1:4245,nats://nats3:4245 -p 4222
+    networks:
+      - nats
     ports:
-    - "4223:4222"
-    - "8223:8222"
-    - "6223:6222"
+      - 4223:4222
+
+  nats3:
+    container_name: nats3
+    image: nats
+    entrypoint: /nats-server
+    command: --server_name N3 --cluster_name JSC --js --sd /data --cluster nats://0.0.0.0:4245 --routes nats://nats1:4245,nats://nats2:4245 -p 4222
+    networks:
+      - nats
+    ports:
+      - 4224:4222
+
+networks:
+  nats:
+    name: nats
