--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,9 @@ services:
     image: nats
     entrypoint: /nats-server
     command: --server_name N1 --cluster_name JSC --js --sd /data --cluster nats://0.0.0.0:4245 --routes nats://nats2:4245,nats://nats3:4245 -p 4222
+    volumes:
+      - ./server.conf:/etc/server.conf
+      - ./auth.conf:/etc/auth.conf
     networks:
       - nats
     ports:
@@ -15,6 +18,9 @@ services:
     image: nats
     entrypoint: /nats-server
     command: --server_name N2 --cluster_name JSC --js --sd /data --cluster nats://0.0.0.0:4245 --routes nats://nats1:4245,nats://nats3:4245 -p 4222
+    volumes:
+      - ./server.conf:/etc/server.conf
+      - ./auth.conf:/etc/auth.conf
     networks:
       - nats
     ports:
@@ -25,6 +31,9 @@ services:
     image: nats
     entrypoint: /nats-server
     command: --server_name N3 --cluster_name JSC --js --sd /data --cluster nats://0.0.0.0:4245 --routes nats://nats1:4245,nats://nats2:4245 -p 4222
+    volumes:
+      - ./server.conf:/etc/server.conf
+      - ./auth.conf:/etc/auth.conf
     networks:
       - nats
     ports:
