--- a/accounts.conf
+++ b/accounts.conf
@@ -2,8 +2,9 @@ accounts: {
   # Use the system account as the default operator
   $SYS {
     users = [
-      { user: "{{ nats.accounts.user | default('admin') }}",
-        pass: "{{ nats.accounts.pass }}"
+      { 
+        user: "admin",
+        pass: "password"
       }
     ]
   },
