--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
     command: --server_name N1 --cluster_name JSC --js --sd /data --cluster nats://0.0.0.0:4245 --routes nats://nats2:4245,nats://nats3:4245 -p 4222
     volumes:
       - ./server.conf:/etc/server.conf
-      #- ./auth.conf:/etc/auth.conf
-      - ./accounts.conf:/etc/accounts.conf
+      - ./auth.conf:/etc/auth.conf
+      #- ./accounts.conf:/etc/accounts.conf
     networks:
       - nats
     ports:
@@ -21,8 +21,8 @@ services:
     command: --server_name N2 --cluster_name JSC --js --sd /data --cluster nats://0.0.0.0:4245 --routes nats://nats1:4245,nats://nats3:4245 -p 4222
     volumes:
       - ./server.conf:/etc/server.conf
-      #- ./auth.conf:/etc/auth.conf
-      - ./accounts.conf:/etc/accounts.conf
+      - ./auth.conf:/etc/auth.conf
+      #- ./accounts.conf:/etc/accounts.conf
     networks:
       - nats
     ports:
@@ -35,8 +35,8 @@ services:
     command: --server_name N3 --cluster_name JSC --js --sd /data --cluster nats://0.0.0.0:4245 --routes nats://nats1:4245,nats://nats2:4245 -p 4222
     volumes:
       - ./server.conf:/etc/server.conf
-      #- ./auth.conf:/etc/auth.conf
-      - ./accounts.conf:/etc/accounts.conf
+      - ./auth.conf:/etc/auth.conf
+      #- ./accounts.conf:/etc/accounts.conf
     networks:
       - nats
     ports:
