solve sub and pub with allow only b topic

--- a/accounts.conf
+++ b/accounts.conf
@@ -16,10 +16,10 @@ accounts: {
             password: "a"
             permissions: {
                 pub: {
-                    allow: "hello.>"
+                    allow: ">"
                 },
                 sub: {
-                    allow: "hello.>"
+                    allow: ">"
                 }
             }
         },
@@ -28,10 +28,12 @@ accounts: {
             password: "b"
             permissions: {
                 pub: {
-                    deny: ">"
+                    # Allow plain subscription foo, but only v1 groups or *.dev queue groups
+                    allow: ["b.*", "b"]
                 },
                 sub: {
-                    allow: "hello.>"
+                    # Allow plain subscription foo, but only v1 groups or *.dev queue groups
+                    allow: ["b.*", "b"]
                 }
             }
         }
