--- a/auth.conf
+++ b/auth.conf
@@ -17,10 +17,13 @@ authorization: {
       password: "b"
       permissions: {
         pub: {
-          deny: ">"
+          #deny: ">"
+          # Allow plain subscription foo, but only v1 groups or *.dev queue groups
+          allow: ["b.*", "b"]
         },
         sub: {
-          allow: "hello.>"
+          # Allow plain subscription foo, but only v1 groups or *.dev queue groups
+          allow: ["b.*", "b"]
          }
       }
     }
