--- a/auth.conf
+++ b/auth.conf
@@ -5,10 +5,10 @@ authorization: {
       password: "a"
       permissions: {
         pub: {
-	        allow: "hello.>"
+	        allow: ">"
         },
         sub: {
-          allow: "hello.>"
+          allow: ">"
          }
       }
     },
