--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,46 +1,36 @@
 version: '3.7'
 services:
-  nats1:
-    container_name: nats1
+  nats-1:
     image: nats
-    entrypoint: /nats-server
-    command: --server_name N1 --cluster_name JSC --js --sd /data --cluster nats://0.0.0.0:4245 --routes nats://nats2:4245,nats://nats3:4245 -p 4222
+    ports:
+      - "8222:8222"
+    command: "-http_port 8222 --server_name NATS --cluster_name JSC --js --sd /data --cluster nats://0.0.0.0:6222 -c /etc/server.conf"
     volumes:
       - ./server.conf:/etc/server.conf
       - ./auth.conf:/etc/auth.conf
       #- ./accounts.conf:/etc/accounts.conf
-    networks:
-      - nats
-    ports:
-      - 4222:4222
+    networks: ["nats"]
+    depends_on: ["nats"]
 
-  nats2:
-    container_name: nats2
+  nats-2:
     image: nats
-    entrypoint: /nats-server
-    command: --server_name N2 --cluster_name JSC --js --sd /data --cluster nats://0.0.0.0:4245 --routes nats://nats1:4245,nats://nats3:4245 -p 4222
+    command: "--server_name N2 --cluster_name NATS --js --sd /data --cluster nats://0.0.0.0:6222 --routes=nats://ruser:T0pS3cr3t@nats:6222 -c /etc/server.conf"
     volumes:
       - ./server.conf:/etc/server.conf
       - ./auth.conf:/etc/auth.conf
       #- ./accounts.conf:/etc/accounts.conf
-    networks:
-      - nats
-    ports:
-      - 4223:4222
+    networks: ["nats"]
+    depends_on: ["nats"]
 
-  nats3:
-    container_name: nats3
+  nats-3:
     image: nats
-    entrypoint: /nats-server
-    command: --server_name N3 --cluster_name JSC --js --sd /data --cluster nats://0.0.0.0:4245 --routes nats://nats1:4245,nats://nats2:4245 -p 4222
+    command: "--server_name N3 --cluster_name NATS --js --sd /data --cluster nats://0.0.0.0:6222 --routes=nats://ruser:T0pS3cr3t@nats:6222 -c /etc/server.conf"
     volumes:
       - ./server.conf:/etc/server.conf
       - ./auth.conf:/etc/auth.conf
       #- ./accounts.conf:/etc/accounts.conf
-    networks:
-      - nats
-    ports:
-      - 4224:4222
+    networks: ["nats"]
+    depends_on: ["nats"]
 
 networks:
   nats:
