--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,8 @@ services:
     image: nats
     ports:
       - "8222:8222"
-    command: "--server_name NATS --cluster_name JSC --cluster nats://0.0.0.0:6222 --http_port 8222 -c /etc/server.conf"
+      - "4222:4222"
+    command: "--server_name NATS --cluster_name JSC --cluster nats://0.0.0.0:6222 --http_port 8222 -p 4222 -c /etc/server.conf"
     volumes:
       - ./server.conf:/etc/server.conf
       - ./auth.conf:/etc/auth.conf
@@ -15,7 +16,9 @@ services:
   nats2:
     container_name: nats2
     image: nats
-    command: "--server_name N2 --cluster_name NATS  --cluster nats://0.0.0.0:6222 --routes=nats://ruser:T0pS3cr3t@nats:6222 -c /etc/server.conf"
+    ports:
+      - "4223:4222"
+    command: "--server_name N2 --cluster_name NATS  --cluster nats://0.0.0.0:6222 --routes=nats://ruser:T0pS3cr3t@nats:6222 -p 4222 -c /etc/server.conf"
     volumes:
       - ./server.conf:/etc/server.conf
       - ./auth.conf:/etc/auth.conf
@@ -26,7 +29,9 @@ services:
   nats3:
     container_name: nats3
     image: nats
-    command: "--server_name N3 --cluster_name NATS  --cluster nats://0.0.0.0:6222 --routes=nats://ruser:T0pS3cr3t@nats:6222 -c /etc/server.conf"
+    ports:
+      - "4224:4222"
+    command: "--server_name N3 --cluster_name NATS  --cluster nats://0.0.0.0:6222 --routes=nats://ruser:T0pS3cr3t@nats:6222 -p 4222 -c /etc/server.conf"
     volumes:
       - ./server.conf:/etc/server.conf
       - ./auth.conf:/etc/auth.conf
