changed with accounts to test

--- a/accounts.conf
+++ b/accounts.conf
@@ -5,6 +5,10 @@ accounts: {
       { 
         user: "admin",
         pass: "password"
+      },
+      { 
+        user: "ruser",
+        pass: "T0pS3cr3t"
       }
     ]
   },
