--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,8 @@ services:
     command: "--server_name NATS --cluster_name JSC --cluster nats://0.0.0.0:6222 --http_port 8222 -p 4222 -c /etc/server.conf"
     volumes:
       - ./server.conf:/etc/server.conf
-      - ./auth.conf:/etc/auth.conf
-      #- ./accounts.conf:/etc/accounts.conf
+      #- ./auth.conf:/etc/auth.conf
+      - ./accounts.conf:/etc/accounts.conf
     networks: ["nats"]
 
   nats2:
@@ -21,8 +21,8 @@ services:
     command: "--server_name N2 --cluster_name NATS  --cluster nats://0.0.0.0:6222 --routes=nats://ruser:T0pS3cr3t@nats:6222 -p 4222 -c /etc/server.conf"
     volumes:
       - ./server.conf:/etc/server.conf
-      - ./auth.conf:/etc/auth.conf
-      #- ./accounts.conf:/etc/accounts.conf --> js --js --sd /data
+      #- ./auth.conf:/etc/auth.conf
+      - ./accounts.conf:/etc/accounts.conf --> js --js --sd /data
     networks: ["nats"]
     depends_on: ["nats"]
 
@@ -34,8 +34,8 @@ services:
     command: "--server_name N3 --cluster_name NATS  --cluster nats://0.0.0.0:6222 --routes=nats://ruser:T0pS3cr3t@nats:6222 -p 4222 -c /etc/server.conf"
     volumes:
       - ./server.conf:/etc/server.conf
-      - ./auth.conf:/etc/auth.conf
-      #- ./accounts.conf:/etc/accounts.conf
+      #- ./auth.conf:/etc/auth.conf
+      - ./accounts.conf:/etc/accounts.conf
     networks: ["nats"]
     depends_on: ["nats"]
 
