--- a/accounts.conf
+++ b/accounts.conf
@@ -13,7 +13,7 @@ accounts: {
     ]
   },
   USERS: [
-    jetstream: enabled
+    jetstream: enabled,
     users: [
         {
             user: "a",
