solve users accounts

--- a/accounts.conf
+++ b/accounts.conf
@@ -1,4 +1,4 @@
-accounts: {
+accounts {
   # Use the system account as the default operator
   $SYS {
     users = [
@@ -12,8 +12,8 @@ accounts: {
       }
     ]
   },
-  USERS: [
-    jetstream: enabled,
+  USERS: {
+    jetstream: enabled
     users: [
         {
             user: "a",
@@ -42,5 +42,5 @@ accounts: {
             }
         }
     ]
-  ]
+  }
 }
