--- a/accounts.conf
+++ b/accounts.conf
@@ -33,11 +33,11 @@ accounts {
             permissions: {
                 pub: {
                     # Allow plain subscription foo, but only v1 groups or *.dev queue groups
-                    allow: ["b.*", "b"]
+                    allow: ["b.>", "b"]
                 },
                 sub: {
                     # Allow plain subscription foo, but only v1 groups or *.dev queue groups
-                    allow: ["b.*", "b"]
+                    allow: ["b.>", "b"]
                 }
             }
         }
